# audio-autoselect

./: .eslintrc-auto-import.json  CHANGES.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml  test-build.yml
docs/: index.md
src/: App.vue  auto-imports.d.ts  main.ts  store.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: audio.rs  main.rs
src/assets/: main.postcss
src/pages/: MainPage.vue  SettingsPage.vue  SplashScreen.vue
