[package]
name = "audio_autoselect"
version = "0.0.2"
description = "Select preferred audio device automatically"
authors = ["Ville Säävuori"]
license = "MIT"
repository = "https://github.com/Uninen/audio-autoselect"
default-run = "audio_autoselect"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0.100"
serde = { version = "1.0.170", features = ["derive"] }
tauri = { version = "1.4.1", features = [ "macos-private-api", "system-tray", "api-all"] }
embed_plist = "1.2.2"
cpal = "0.15.2"
anyhow = "1.0.71"
window-vibrancy = "0.4.0"
window-shadows = "0.2.1"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
